Fix navbar links visibility and responsiveness

--- a/client/src/Components/section/NavigationBar/NavigationBar.css
+++ b/client/src/Components/section/NavigationBar/NavigationBar.css
@@ -52,7 +52,7 @@
 }
 
 /* ====== Responsive Styling ====== */
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .navbar .dropdown-menu {
     width: 100%;
   }
@@ -65,6 +65,11 @@
   .navbar .nav-link {
     text-align: center;
     margin-top: 10px;
+  }
+
+  .navbar-collapse {
+    flex-basis: 100%;
+    flex-grow: 1;
   }
 }
 
